// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foundry-agent-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Create, update, and manage agent deployments in Azure AI Foundry. Supports both prompt agents (LLM-based) and hosted agents (container-based). Manages container lifecycle (start/stop) and monitors agent status.
USE FOR: deploy agent, create agent, hosted agent, prompt agent, start container, stop container, agent status, clone agent, delete agent, agent container, Foundry agent deployment.
DO NOT USE FOR: containerizing projects or building Docker images (use foundry-agent-package), invoking or testing agents (use foundry-agent-run), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "both",
    "building",
    "clone",
    "container",
    "container-based",
    "containerizing",
    "create",
    "delete",
    "deploy",
    "deployment",
    "deployments",
    "docker",
    "foundry",
    "foundry-agent-package",
    "foundry-agent-run",
    "functions",
    "hosted",
    "images",
    "invoking",
    "lifecycle",
    "llm-based",
    "manage",
    "manages",
    "mcp",
    "monitors",
    "projects",
    "prompt",
    "start",
    "status",
    "stop",
    "supports",
    "testing",
    "update",
  ],
  "name": "foundry-agent-deploy",
}
`;

exports[`foundry-agent-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "both",
  "building",
  "clone",
  "container",
  "container-based",
  "containerizing",
  "create",
  "delete",
  "deploy",
  "deployment",
  "deployments",
  "docker",
  "foundry",
  "foundry-agent-package",
  "foundry-agent-run",
  "functions",
  "hosted",
  "images",
  "invoking",
  "lifecycle",
  "llm-based",
  "manage",
  "manages",
  "mcp",
  "monitors",
  "projects",
  "prompt",
  "start",
  "status",
  "stop",
  "supports",
  "testing",
  "update",
]
`;
